--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,8 +3,8 @@
 :root {
     /** COLOR PALETTE **/
     /* --backgroung: #F8F9FA; */
-    --backgroung: rgba(248, 249, 250, 1);
-    --blue: rgba(56, 96, 170, 1);
+    --backgroung: linear-gradient(#283048, #859398);;
+    --blue: rgb(59 71 92);
     --blue-light: rgba(56, 96, 170, 0.3);
     --yellow: rgba(253, 216, 93, 1);
     --yellow-light: rgba(253, 216, 93, 0.5);
@@ -30,6 +30,7 @@
 .inter-bold{
     font-family: 'Inter', sans-serif;
     font-weight: 700;
+    color: white;
 }
 
 a {
@@ -37,7 +38,7 @@ a {
 }
 
 .container{
-    background-color: var(--backgroung);
+    background-image: var(--backgroung);
     display: grid;
     /* min-height: 100vh; */
     min-height: 84.5vh;
